Removed Nullpointer Bug caused by findNextReferencesClass